--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="library">
           <div class="options">
             <div class="lib-option nav-option">
-              <img src="./library_icon.png" />
+              <img src="library_icon.png" />
               <a href="#">Your Library</a>
             </div>
             <div class="icons">
@@ -62,8 +62,8 @@
       <div class="main-content">
         <div class="sticky-nav">
           <div class="sticky-nav-icons">
-            <img src="/backward_icon.png" />
-            <img src="/forward_icon.png" class="hide" />
+            <img src="backward_icon.png" />
+            <img src="forward_icon.png" class="hide" />
           </div>
           <div class="sticky-nav-options">
             <button class="badge nav-item hide">Explore Premium</button>
